@@ -15,13 +15,12 @@
 Hopefully these instructions will become redundant before long, but 
 if you're running gretl on Linux the version of
 gnuplot available via your Linux distribution may not be sufficiently
-up to date to work optimally with gretl.  For good results, gnuplot
-should be version 4.4 or higher; for best results, we recommend the
-4.6 release or current CVS.
+up to date to work optimally with gretl.  For best results, we 
+recommend the 4.6 release or current CVS.
 </p>
 
 <p>
-To get a good build of gnuplot for use with gretl you have two options:
+To get an up-to-date build of gnuplot for use with gretl you have two options:
 build CVS gnuplot yourself, or use a special packaged binary.
 </p>
 
