@@ -264,7 +264,7 @@ href="http://sourceforge.net/projects/gretl/files/tramo/tramo-seats-linux.tar.gz
 <h2>Gnuplot</h2>
 
 <p>Gretl calls gnuplot to generate graphs.  We require gnuplot
-version 4.2.0 or higher, but version 4.6.1 (the current
+version 4.4.0 or higher, but version 4.6.1 (the current
 release as of September 2012) or higher is recommended. See
 <a href="http://gnuplot.sourceforge.net/">gnuplot.sourceforge.net</a>.
 The gretl packages for MS Windows and OS X include a gnuplot version
