@@ -298,15 +298,7 @@ int gnuplot_eps_terminal (void);
 
 int gnuplot_png_terminal (void);
 
-int gnuplot_has_latin5 (void);
-
-int gnuplot_has_cp1254 (void);
-
 int gnuplot_has_cp950 (void);
-
-int gnuplot_has_bbox (void);
-
-int gnuplot_has_utf8 (void);
 
 void set_graph_palette (int i, gretlRGB color);
 
