@@ -1,5 +1,6 @@
 version 1.9.12, in progress
 - Improve structural integrity of model specification dialog
+- Gnuplot version: require 4.4.0 or higher
 
 2012-11-21 version 1.9.11
 - Substantial re-write of code for handling named variables
